--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-intl": "^6.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
