--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-intl": "^6.6.2"
+    "react-intl": "^6.6.2",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
