--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.6.2",
+    "react-type-animation": "^3.2.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
