--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react-dom": "^18",
     "react-intl": "^6.6.2",
     "react-type-animation": "^3.2.0",
+    "resend": "^3.2.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.19",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
