--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-compose-plugins": "^2.2.1",
     "next-i18next": "^15.2.0",
+    "next-intl": "^3.9.4",
+    "next-translations": "^8.6.1",
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.6.2",
