--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.1",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-compose-plugins": "^2.2.1",
