--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.1",
+    "cookies-next": "^4.1.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
