012 fix page load speed

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npx serve@latest out",
-
     "export": "next build && next export",
     "lint": "next lint"
   },
@@ -21,6 +20,7 @@
     "next-i18next": "^15.2.0",
     "next-intl": "^3.9.4",
     "next-translations": "^8.6.1",
+    "primereact": "^10.6.5",
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.6.2",
