--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-intl": "^6.6.2",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "20.11.19",
