--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@types/dat.gui": "^0.7.13",
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.1.1",
+    "dat.gui": "^0.7.9",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.3",
+    "gsap": "^2.1.3",
     "next": "14.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-i18next": "^15.2.0",
@@ -29,7 +32,7 @@
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0",
     "sass": "^1.70.0",
-    "swiper": "^11.1.4"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@types/node": "20.11.19",
