--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^6.4.0",
     "@types/dat.gui": "^0.7.13",
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.1.1",
