--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-intl": "^6.6.2",
     "react-type-animation": "^3.2.0",
+    "react-wavify": "^1.11.1",
     "resend": "^3.2.0",
     "sass": "^1.70.0",
     "swiper": "^11.2.1"
