--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "primereact": "^10.9.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-intl": "^6.6.2",
     "react-type-animation": "^3.2.0",
     "react-wavify": "^1.11.1",
