--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.2",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "next-compose-plugins": "^2.2.1",
-    "primereact": "^10.9.1",
+    "primereact": "^10.9.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
